# rag_homework

./: README.md
rag-homework/: 01_implementation.md  02_improvements.md  README.md  pyproject.toml
rag-homework/00_planning/: 01_idea.md  02_data.md  03_architecture.md  04_stack.md  05_risks.md
rag-homework/app/: chunking.py  config.py  generator.py  guard.py  retrieval.py  streamlit_app.py
rag-homework/data/index/: matrix.joblib  vectorizer.joblib
rag-homework/data/processed/: chunks.jsonl  documents.jsonl
rag-homework/doc/: dataset.md
rag-homework/homewok/: SUBMISSION.md
rag-homework/homework/: SUBMISSION.md
rag-homework/scripts/: build_index.py  check_generator.py  check_retrieval.py  prepare_data.py
rag-homework/tests/: conftest.py  test_chunking.py  test_generator.py  test_guard.py  test_my_addition.py  test_pipeline.py  test_retrieval.py
