[project]
name = "rag-homework"
version = "0.1.0"
description = "Учебный RAG на TF-IDF с demo-ответом и источниками"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "streamlit>=1.35.0",
    "joblib>=1.4.0",
    "datasets>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
